fix: Darkened overlay from sidebar only covers half of screen

--- a/components/VSMCanvas.module.scss
+++ b/components/VSMCanvas.module.scss
@@ -139,9 +139,8 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: black;
-  opacity: 0.12;
-  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.12);
+  z-index: 25;
 }
 
 .center {
